# YourNovelHelper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  setup.sh
.github/workflows/: docker-image.yml
config/: config.yaml
data/raw/: novel1.txt  novel2.txt
scripts/: download_model.py
src/api/: main.py  webui.py
src/data/: preprocess.py
src/inference/: generate.py
src/training/: train.py
tests/: test_api.py  test_generate.py  test_preprocess.py  test_train.py
